--- a/ERPWeb/Views/User/Index.cshtml
+++ b/ERPWeb/Views/User/Index.cshtml
@@ -264,22 +264,22 @@
 
             data: {
                 labels: labelsArray,
-                //labelFontColor: "red",
-                //color:'#3EB9DC',
+                labelFontColor: "red",
+                color:'#3EB9DC',
                 datasets: [{
                     label: 'Material Stock',
 
-                    //backgroundColor: '#3EB9DC',
-                    backgroundColor: [
-                        "#f990a7",
-                        "#aad2ed",
-                        "#9966FF",
-                        "#99e5e5",
-                        "#f7bd83",
-                        "#A52A2A",
-                        "#DC143C",
-                        "#FFA500 "
-                    ],
+                    backgroundColor: '#3EB9DC',
+                    //backgroundColor: [
+                    //    "#f990a7",
+                    //    "#aad2ed",
+                    //    "#9966FF",
+                    //    "#99e5e5",
+                    //    "#f7bd83",
+                    //    "#A52A2A",
+                    //    "#DC143C",
+                    //    "#FFA500 "
+                    //],
                     data: dataArray
                 }]
             },
