--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialMainView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialMainView.cshtml
@@ -12,7 +12,7 @@
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">RawMaterial Name</th>
-                    <th style="vertical-align:middle">Unit</th>
+                    @*<th style="vertical-align:middle">Unit</th>*@
                     <th style="vertical-align:middle">Total IN</th>
                     <th style="vertical-align:middle">Total OUT</th>
                     <th class="hide" style="vertical-align:middle">Return In</th>
@@ -152,7 +152,7 @@
                         <td class="hide">@item.RawMaterialId</td>
                         @*<td class="hide">@item.OrganizationId</td>*@
                         <td class="text-center">@item.RawMaterialName</td>
-                        <td class="text-center">@item.UnitName</td>
+                        @*<td class="text-center">@item.UnitName</td>*@
                         <td class="text-center text-bold">
                         @stockIn
                         </td>
