--- a/ERPWeb/Reports/ERPRpt/Agriculture/rptAgroProductSalesReport.rdlc
+++ b/ERPWeb/Reports/ERPRpt/Agriculture/rptAgroProductSalesReport.rdlc
@@ -292,7 +292,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Product Total</Value>
+                                  <Value>Total</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -2240,7 +2240,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Quanity</Value>
+                                  <Value>Quantity</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -2696,7 +2696,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Product Total</Value>
+                                  <Value>Total</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
