--- a/ERPWeb/Views/AgroConfiguration/_GetPackageRMStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetPackageRMStockList.cshtml
@@ -13,10 +13,10 @@
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">RawMaterial Name</th>
                     <th style="vertical-align:middle">Unit Name</th>
-                    <th style="vertical-align:middle">Total IN</th>
-                    <th style="vertical-align:middle">Total OUT</th>
-                    <th style="vertical-align:middle">Return In</th>
-                    <th style="vertical-align:middle">Total Remain</th>
+                    <th style="vertical-align:middle">Stock IN</th>
+                    <th style="vertical-align:middle">Stock OUT</th>
+                    <th style="vertical-align:middle">Return Stock</th>
+                    <th style="vertical-align:middle">Current Stock</th>
                     @*<th style="vertical-align:middle">Action</th>*@
                 </tr>
             </thead>
