--- a/ERPWeb/Views/AgroConfiguration/_GetSalesPaymentRegisterList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetSalesPaymentRegisterList.cshtml
@@ -22,7 +22,7 @@
             <th style="vertical-align:middle">Area Name</th>
             <th style="vertical-align:middle">Territory Name</th>
             <th style="vertical-align:middle">Stockiest Name</th>
-            <th style="vertical-align:middle">Payment Mode</th>
+            @*<th style="vertical-align:middle">Payment Mode</th>*@
             <th style="vertical-align:middle">Account Number</th>
             <th style="vertical-align:middle">Total Amount</th>
             <th style="vertical-align:middle">Payment Amount</th>
@@ -46,7 +46,7 @@
                 <td class="text-center">@item.AreaName</td>
                 <td class="text-center">@item.TerritoryName</td>
                 <td class="text-center">@item.StockiestName</td>
-                <td class="text-center">@item.PaymentMode</td>
+                @*<td class="text-center">@item.PaymentMode</td>*@
                 <td class="text-center">@item.AccountNumber</td>
                 <td class="text-center">@item.TotalAmount</td>
                 <td class="text-center">@item.PaymentAmount</td>
