--- a/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
@@ -46,7 +46,7 @@
                             @*<td class="text-center hide">@item.CommissionOnProductOnSalesId</td>*@
 
                             <td class="text-center">
-                                <a href="#" class="emndetails-btn data-item-detail" title="view" data-item-detail="@item.CommissionOnProductOnSalesId" style="line-height:1">
+                                <a href="#" class="emndetails-btn data-item-detail" title="view" data-item-detail="@item.ProductSalesInfoId" style="line-height:1">
                                     <i class="fas fa-eye"></i>
                                 </a>
                             </td>
